--- a/Index/Index.html
+++ b/Index/Index.html
@@ -12,8 +12,8 @@
 <body class="">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-                <img class="d-inline-block align-text-top" src="../Images/logo.png" alt="TimeWaste?" width="30" height="30">
+            <a class="navbar-brand link-body-emphasis" href="#">
+                <img class="d-inline-block align-text-top rounded-3 " src="../Images/logo.png" alt="TimeWaste?" width="30" height="30">
                 TimeWaste?
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -22,21 +22,69 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    <a class="nav-link" href="#">Features</a>
-                    <a class="nav-link" href="#">Pricing</a>
+                    <a class="nav-link" href="#">Videos</a>
+                    <a class="nav-link" href="#">Socials</a>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          Dropdown link
+                          Categories!
                         </a>
                         <ul class="dropdown-menu">
-                          <li><a class="dropdown-item" href="#">Action</a></li>
-                          <li><a class="dropdown-item" href="#">Another action</a></li>
-                          <li><a class="dropdown-item" href="#">Something else here</a></li>
+                          <li><a class="dropdown-item" href="#">Gaming</a></li>
+                          <li><a class="dropdown-item" href="#">Tech Reviews</a></li>
+                          <li><a class="dropdown-item" href="#">About</a></li>
                         </ul>
                       </li>
                   </div>
             </div>
         </div>
     </nav>
+
+
+
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="../Images/carousel-1.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="../Images/carousel-2.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="../Images/carousel-3.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="../Images/carousel-4.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="../Images/carousel-5.jpg" class="d-block w-100" alt="...">
+          </div>
+        </div>
+      </div>
+
+
+
+
+    <a tabindex="0" class="btn btn-lg rounded-circle rounded-end-0 border-0 position-absolute top-50 end-0 translate-middle-y" role="button" data-bs-toggle="popover" data-bs-trigger="focus" title="Dismissible popover" data-bs-content="Jester, A Clown that sometimes Explodes... Most of the Time.">
+        <img class="rounded-circle rounded-end-0 img-fluid" src="../Images/Mad-Jester.png" alt="Jester" width="500px">
+    </a>
+
+
+    <ul class="nav nav-tabs position-fixed bottom-0 end-50">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Active</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#"">Link</a>
+        </li>
+      </ul>
+
+
+
 </body>
 </html>
