--- a/Index/Index.html
+++ b/Index/Index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Designs.css">
+    <link rel="stylesheet" href="../Designs.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Time</title>
 </head>
 <body class="">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary position-fixed z-3 w-100">
         <div class="container-fluid">
             <a class="navbar-brand link-body-emphasis" href="#">
                 <img class="d-inline-block align-text-top rounded-3 " src="../Images/logo.png" alt="TimeWaste?" width="30" height="30">
@@ -21,9 +21,9 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    <a class="nav-link" href="#">Videos</a>
-                    <a class="nav-link" href="#">Socials</a>
+                    <a class="nav-link nav-item active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link nav-item" href="#">Videos</a>
+                    <a class="nav-link nav-item" href="#">Socials</a>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                           Categories!
@@ -43,20 +43,20 @@
 
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="../Images/carousel-1.png" class="d-block w-100" alt="...">
+          <div class="carousel-item carousel-image bg-img-1 active">
+            <!-- <img src="../Images/carousel-1.png" class="d-block w-100" alt="..."> -->
           </div>
-          <div class="carousel-item">
-            <img src="../Images/carousel-2.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-item carousel-image bg-img-2">
+            <!-- <img src="../Images/carousel-2.jpg" class="d-block w-100" alt="..."> -->
           </div>
-          <div class="carousel-item">
-            <img src="../Images/carousel-3.png" class="d-block w-100" alt="...">
+          <div class="carousel-item carousel-image bg-img-3">
+            <!-- <img src="../Images/carousel-3.png" class="d-block w-100" alt="..."> -->
           </div>
-          <div class="carousel-item">
-            <img src="../Images/carousel-4.png" class="d-block w-100" alt="...">
+          <div class="carousel-item carousel-image bg-img-4">
+            <!-- <img src="../Images/carousel-4.png" class="d-block w-100" alt="..."> -->
           </div>
-          <div class="carousel-item">
-            <img src="../Images/carousel-5.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-item carousel-image bg-img-5">
+            <!-- <img src="../Images/carousel-5.jpg" class="d-block w-100" alt="..."> -->
           </div>
         </div>
       </div>
@@ -64,8 +64,8 @@
 
 
 
-    <a tabindex="0" class="btn btn-lg rounded-circle rounded-end-0 border-0 position-absolute top-50 end-0 translate-middle-y" role="button" data-bs-toggle="popover" data-bs-trigger="focus" title="Dismissible popover" data-bs-content="Jester, A Clown that sometimes Explodes... Most of the Time.">
-        <img class="rounded-circle rounded-end-0 img-fluid" src="../Images/Mad-Jester.png" alt="Jester" width="500px">
+    <a tabindex="0" class="btn btn-lg rounded-circle rounded-end-0 border-0 position-absolute top-50 end-0 translate-middle-y" role="button" data-bs-toggle="popover" data-bs-trigger="focus" title="Dismissible popover" data-bs-placement="left" data-bs-content="Jester, A Clown that sometimes Explodes... Most of the Time.">
+        <img class="rounded-circle rounded-end-0 img-fluid shadow-lg" src="../Images/Mad-Jester.png" alt="Jester" width="500px">
     </a>
 
 
@@ -85,6 +85,11 @@
       </ul>
 
 
-
+<script>
+  var popoverTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover"]'))
+var popoverList = popoverTriggerList.map(function (popoverTriggerEl) {
+  return new bootstrap.Popover(popoverTriggerEl)
+})
+</script>
 </body>
 </html>
